hphp/hack/test/typecheck/type_structure/typing_type_structure5.php.exp
File "typing_type_structure5.php", line 5, characters 29-29:
C is uninstantiable (Typing[4002])
File "typing_type_structure5.php", line 3, characters 22-22:
Declaration is here
