hphp/hack/test/typecheck/type_structure/typing_type_structure5.php
<?hh

abstract final class C {}

function test(TypeStructure<C> $x): void {}
